--- a/stylesAndSemantics/div.html
+++ b/stylesAndSemantics/div.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;div&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Div - &lt;div&gt;</h1>
+    <p>Div tags are used to divise a section or container in a html document</p>
+    <p>This section can then be styled or manipulated with css of javascript.</p>
+    <p>The class is easily styled using the class or id attribute</p>
     
 </body>
 </html>
