--- a/stylesAndSemantics/style.html
+++ b/stylesAndSemantics/style.html
@@ -14,13 +14,32 @@
 <body>
    
     <h1>Style - &lt;style&gt;</h1>
-    <p>Style tags can be placed anywhere in the document and the styles for certain html elements will be put into effect.</p>
+    <p>Style tags can be placed anywhere in the document and the styles for the specified html elements will be put into effect.</p>
     <p>Multiple style tags can be put in the document however the last placed style tag will be the one put into use throughout the whole document</p>
     <p>It is not possible to change styles halfway through the document with another pair of style tags :(</p>
+
+    <br>
+
     <p>The following shows the h2 and h3 tags with the associated style:</p>
     <img src="../media/images/styles.jpg">
     <h2>h2 red</h2>
     <h3>h3 blue</h3>
+
+    <br>
+
+    <p>The default CSS settings are:</p>
+    <img src="../media/images/defaultStyle.jpg">
+
+    <br><br>
+
+    <p>The style tag has 2 attributes:</p>
+    <p> - Media attribute. This attribute allows for a desired media device that the styling is to be suited best for.</p>
+    <a href="https://www.w3schools.com/tags/att_style_media.asp"> - Further Media Attribute Information</a>
+    <p> - Type attribute. This attribute helps specify the content between the style tags. Default is text/css</p>
+    <a href="https://www.w3schools.com/tags/tag_style.asp"> - Further Type Attribute information</a>
+    <p>The global and event attributes are also supported.</p>
+
+    <br><br>
 
 </body>
 </html>
