div and styles done

--- a/stylesAndSemantics/div.html
+++ b/stylesAndSemantics/div.html
@@ -11,6 +11,21 @@
     <p>Div tags are used to divise a section or container in a html document</p>
     <p>This section can then be styled or manipulated with css of javascript.</p>
     <p>The class is easily styled using the class or id attribute</p>
+    <p>Any content can be put into the div tag</p>
+    <p>By default browsers will put a line break before and after the div element: Below shows these breaks:</p>
     
+    <br>
+
+    Before.
+    <div>Here is text inside of a div element.</div>
+    After.
+
+    <!-- 2 br tags needed here to get a line break and and produce an blank line to split content up-->
+    <br><br>
+
+    Before.
+    Here is text without a div element.
+    After.
+
 </body>
 </html>
