--- a/stylesAndSemantics/div.html
+++ b/stylesAndSemantics/div.html
@@ -12,10 +12,11 @@
     <p>This section can then be styled or manipulated with css of javascript.</p>
     <p>The class is easily styled using the class or id attribute</p>
     <p>Any content can be put into the div tag</p>
-    <p>By default browsers will put a line break before and after the div element: Below shows these breaks:</p>
-    
-    <br>
+    <p>By default browsers will put a line break before and after the div element. The examples below show the difference:</p>
 
+    <br>
+    
+    <h2>Examples:</h2>
     Before.
     <div>Here is text inside of a div element.</div>
     After.
@@ -26,6 +27,17 @@
     Before.
     Here is text without a div element.
     After.
+
+    <br><br>
+
+    <h2>Default Styling:</h2>
+    <p>Default css settings are:</p>
+    <img src="../media/images/divDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
 
 </body>
 </html>
