--- a/stylesAndSemantics/footer.html
+++ b/stylesAndSemantics/footer.html
@@ -2,13 +2,41 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;footer&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
-    
+    <h1>Footer - &lt;footer&gt;</h1>
+    <p>Footer tags define a footer for a document or section</p>
+    <p>You can have multiple footers on one page.</p>
+    <p>Footers usually contain:</p>
+    <ul>
+        <li>Authorship info</li>
+        <li>Copyright info</li>
+        <li>Contact info(inside of &lt;address&gt; tags</li>
+        <li>Sitemap</li>
+        <li>Back to top links</li>
+        <li>Related documents</li>
+    </ul>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <footer>
+        <p>Author - Stephen Mogg</p>
+        <adress>Hull</adress>
+    </footer>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <img src="../media/images/footerDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
+
 </body>
 </html>
