--- a/stylesAndSemantics/div.html
+++ b/stylesAndSemantics/div.html
@@ -12,6 +12,7 @@
     <p>This section can then be styled or manipulated with css of javascript.</p>
     <p>The class is easily styled using the class or id attribute</p>
     <p>Any content can be put into the div tag</p>
+    <p>Div is a block-level container/element</p>
     <p>By default browsers will put a line break before and after the div element. The examples below show the difference:</p>
 
     <br>
