--- a/stylesAndSemantics/span.html
+++ b/stylesAndSemantics/span.html
@@ -2,13 +2,31 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;span&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Span - &lt;span&gt;</h1>
+    <p>Span elements are most commonly used mid paragraph to colour part of text.</p>
+    <p>It is an inline container used to mark up a part of text or part of a document</p>
+    <p>This is easily styled by css or manipulated with javascript using the class or id attribute.</p>
+    <p>Span is much like the div element however div is a block level element unlike span which is an inline element</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <p> This text is normal <span style="color: rgb(9, 224, 9); font-style: italic;">unlike this text</span></p>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
     
 </body>
 </html>
