--- a/stylesAndSemantics/style.html
+++ b/stylesAndSemantics/style.html
@@ -28,7 +28,7 @@
 
     <br>
 
-    <h2>Default Styling:</h2>>
+    <h2>Default Styling:</h2>
     <img src="../media/images/defaultStyle.jpg">
 
     <br><br>
