--- a/stylesAndSemantics/div.html
+++ b/stylesAndSemantics/div.html
@@ -33,7 +33,7 @@
 
     <h2>Default Styling:</h2>
     <p>Default css settings are:</p>
-    <img src="../media/images/divDefault.jpg">
+    <img src="media/images/defaultStyles/divDefault.jpg">
 
     <br>
 
