--- a/stylesAndSemantics/footer.html
+++ b/stylesAndSemantics/footer.html
@@ -31,7 +31,7 @@
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="../media/images/footerDefault.jpg">
+    <img src="media/images/defaultStyles/footerDefault.jpg">
 
     <br>
 
