--- a/stylesAndSemantics/style.html
+++ b/stylesAndSemantics/style.html
@@ -22,14 +22,14 @@
     <br>
 
     <h2>Examples:</h2>
-    <img src="../media/images/styleDefault.jpg">
+    <img src="media/images/examples/styleExample.jpg">
     <h3>h3 red</h3>
     <h4>h4 blue</h4>
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="../media/images/defaultStyle.jpg">
+    <img src="media/images/defaultStyles/styleDefault.jpg">
 
     <br><br>
 
