--- a/stylesAndSemantics/header.html
+++ b/stylesAndSemantics/header.html
@@ -2,13 +2,35 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;header&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Header - &lt;header&gt;</h1>
+    <p>The header element is a container for introductory content on a page.</p>
+    <p>It can also be used inside of an article element</p>
+    <p>It typically holds one or more h1-h6 elements, a logo icon and authorship information.</p>
+    <p>There can be multiple heading elements in any one document.</p>
+    <p>This element cannot be placed inside of footer, address or another heading element.</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <header>
+        <h3>Main page heading</h3>
+        <p>Created by Stephen Mogg</p>
+    </header>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <img src="media/images/defaultStyles/headerDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
     
 </body>
 </html>
