Section element completed

--- a/stylesAndSemantics/main.html
+++ b/stylesAndSemantics/main.html
@@ -2,13 +2,38 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;main&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Main - &lt;main&gt;</h1>
+    <p>The main tag specifies main content of a document.</p>
+    <p>The content inside of this element should be completely unique meaning contents shouldt be repeated in any other document.</p>
+    <p>Content like sidebars, navigations links, copyright information, site logos and search forms should not be included in this element.</p>
+    <p>There should only be one main element in any one document.</p>
+    <p>This element should not be contained in an article, aside, footer, header or nav element.</p>
+    <p>Typically main elements go inside of a body element.</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <main>
+        <h3>Content1</h3>
+        <p>Content1 info</p>
+        <h3>Content2</h3>
+        <p>Content2 info</p>
+    </main>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
     
 </body>
 </html>
