--- a/stylesAndSemantics/section.html
+++ b/stylesAndSemantics/section.html
@@ -2,13 +2,33 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;section&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Section - &lt;section&gt;</h1>
+    <p>The section element defines a section within a document</p>
+    <p>This is typically used within the body element.</p>
+    <p>This is fairly similar to the main element however this element can be used as many times as needed.</p>
     
+    <br>
+
+    <h2>Examples:</h2>
+    <section>
+        <h3>Section heading</h3>
+        <p>Section paragraph</p>
+    </section>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <img src="media/images/defaultStyles/sectionDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
+
 </body>
 </html>
