Article element completed

--- a/stylesAndSemantics/article.html
+++ b/stylesAndSemantics/article.html
@@ -2,13 +2,40 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;article&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Article - &lt;article&gt;</h1>
+    <p>The article element specifies independent, self contained content</p>
+    <p>An article element should make sense on its own and it. It should also be possible for the article to be distributed independently from the rest of the site.</p>
+    <p>Content inside of the article element could be forum posts, blog posts and news stories</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <article>
+        <h3>Articles:</h3>
+        <article>
+            <h4>Article1</h4>
+            <p>Article1 description</p>
+        </article>
+        <article>
+            <h4>Article2</h4>
+            <p>Article2 description</p>
+        </article>
+    </article>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <img src="media/images/defaultStyles/articleDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
     
 </body>
 </html>
