--- a/stylesAndSemantics/aside.html
+++ b/stylesAndSemantics/aside.html
@@ -2,13 +2,38 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;aside&gt;</title>
 <!-- &lt; &gt; -->
-
+<head>
+    <style>
+        aside {width: 30%; padding-left: 15px; margin-left: 15px; float:unset; font-style: italic; background-color: lightgrey;}
+    </style>
+</head>
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Aside - &lt;aside&gt;</h1>
+    <p>The aside element defines content that is indirectly related to the surrounding content.</p>
+    <p>The aside content is often placed as a sidebar in a document</p>
+    <p>This needs styling in order to appear different to the content it is aside to!</p>
     
+    <br>
+
+    <h2>Examples:</h2>
+    <p>Paragraph</p>
+    <aside>
+        <p>Aside paragraph</p>
+    </aside>
+    <p>Paragraph</p>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <img src="media/images/defaultStyles/asideDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
+
 </body>
 </html>
