Further detail made on elements

--- a/stylesAndSemantics/aside.html
+++ b/stylesAndSemantics/aside.html
@@ -15,6 +15,7 @@
     <p>The aside element defines content that is indirectly related to the surrounding content.</p>
     <p>The aside content is often placed as a sidebar in a document</p>
     <p>This needs styling in order to appear different to the content it is aside to!</p>
+    <p>Aside should not be used for parentheticals since those should be part of the main flow of the document.</p>
     
     <br>
 
