--- a/stylesAndSemantics/div.html
+++ b/stylesAndSemantics/div.html
@@ -12,7 +12,9 @@
     <p>This section can then be styled or manipulated with css of javascript.</p>
     <p>The class is easily styled using the class or id attribute</p>
     <p>Any content can be put into the div tag</p>
-    <p>Div is a block-level container/element</p>
+    <p>Div is a block-level container/element. It will take up the full width of the screen</p>
+    <p>Flexboxes are commonly being used with div elements.</p>
+    <p>CSS can be used to make elements that are similar to div elements.</p>
     <p>By default browsers will put a line break before and after the div element. The examples below show the difference:</p>
 
     <br>
@@ -25,9 +27,9 @@
     <!-- 2 br tags needed here to get a line break and and produce an blank line to split content up-->
     <br><br>
 
-    Before.
-    Here is text without a div element.
-    After.
+    <span>Before</span>
+    <span>Here is text without a div element.</span>
+    <span>After.</span>
 
     <br><br>
 
