--- a/stylesAndSemantics/footer.html
+++ b/stylesAndSemantics/footer.html
@@ -19,14 +19,18 @@
         <li>Back to top links</li>
         <li>Related documents</li>
     </ul>
+    <p>Footer elements do not section content therefore isnt included in the document outline</p>
+    <p>A footer element should always be related to its parent element. It should also be the last element in that element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <footer>
-        <p>Author - Stephen Mogg</p>
-        <adress>Hull</adress>
-    </footer>
+    <span>
+        <footer>
+            <p>Author - Stephen Mogg</p>
+            <adress>Hull</adress>
+        </footer>
+    </span>
 
     <br>
 
