--- a/stylesAndSemantics/header.html
+++ b/stylesAndSemantics/header.html
@@ -13,6 +13,7 @@
     <p>It typically holds one or more h1-h6 elements, a logo icon and authorship information.</p>
     <p>There can be multiple heading elements in any one document.</p>
     <p>This element cannot be placed inside of footer, address or another heading element.</p>
+    <p>Header elements do not section content therefore it does not create a new section in the outline.</p>
 
     <br>
 
