--- a/stylesAndSemantics/section.html
+++ b/stylesAndSemantics/section.html
@@ -11,6 +11,9 @@
     <p>The section element defines a section within a document</p>
     <p>This is typically used within the body element.</p>
     <p>This is fairly similar to the main element however this element can be used as many times as needed.</p>
+    <p>A section typically contains headings and paragraphs</p>
+    <p>A section with no heading would not appear in the document outline. Creating a heading and making it hidden is how to solve it.</p>
+    <p>Secondary navigation is sometimes included in a section element.</p>
     
     <br>
 
