--- a/stylesAndSemantics/span.html
+++ b/stylesAndSemantics/span.html
@@ -12,6 +12,7 @@
     <p>It is an inline container used to mark up a part of text or part of a document</p>
     <p>This is easily styled by css or manipulated with javascript using the class or id attribute.</p>
     <p>Span is much like the div element however div is a block level element unlike span which is an inline element</p>
+    <p>It can be used to group elements for styling purposes without line breaks and inline style(not taking up the rest of the width of the line)</p>
 
     <br>
 
