--- a/stylesAndSemantics/style.html
+++ b/stylesAndSemantics/style.html
@@ -9,6 +9,7 @@
 <style>
     h3 {color:red}
     h4 {color:blue}
+    .pStyle {color:green}
 </style>
 
 <body>
@@ -17,14 +18,18 @@
     <p>Style tags can be placed anywhere in the document and the styles for the specified html elements will be put into effect.</p>
     <p>Multiple style tags can be put in the document however the last placed style tag will be the one put into use throughout the whole document</p>
     <p>It is not possible to change styles halfway through the document with another pair of style tags :(</p>
-    <p>The following shows the h2 and h3 tags with the associated style:</p>
+    <p>In general external stylesheets should be made and applied to the document using a link element</p>
+    <p>Using the class attribute on elements, alternative styling can be done without specifying certain elements. These are named with a '.' and then its name. The dot is not included when specifying the class</p>
+    <p>The following shows the h2 and h3 tags with the associated style: Also the alternative styling is shown:</p>
 
     <br>
 
     <h2>Examples:</h2>
     <img src="media/images/examples/styleExample.jpg">
-    <h3>h3 red</h3>
-    <h4>h4 blue</h4>
+    <h3>H3 red</h3>
+    <h4>H4 blue</h4>
+    <p class="pStyle">Paragraph green</p>
+
 
     <br>
 
