--- a/stylesAndSemantics/dialog.html
+++ b/stylesAndSemantics/dialog.html
@@ -2,13 +2,32 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;dialog&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Dialog - &lt;dialog&gt;</h1>
+    <p>The dialog tag defines a dialog box or subwindow</p>
+    <p>It is used to create popup dialogs and modals on webpages</p>
+    <p>The dialog element has similarities to the aside element and the details element</p>
     
+    <br>
+
+    <h2>Examples:</h2>
+    <p>Paragraph</p>
+    <dialog open>Open dialog</dialog>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The dialog tag has an open attribute which is used to specifiy if the element is active and that the user can interact with it.</p>
+    <p>The global and event attributes are supported.</p>
+
 </body>
 </html>
