--- a/stylesAndSemantics/summary.html
+++ b/stylesAndSemantics/summary.html
@@ -2,13 +2,34 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;summary&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Summary - &lt;summary&gt;</h1>
+    <p>The summary element is used to define a visible heading inside the details element.</p>
+    <p>The heading can be clicked to view or hide the details</p>
+    <p>This element should be the first child element of the details element.</p>
+    <p>Heading elements and semantics can be used inside of a summary!</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <details>
+        <summary><strong>Details summary!</strong></summary>
+        <p>Paragraph inside of a details element!</p>
+    </details>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <img src="media/images/defaultStyles/summaryDefault.jpg">
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global and event attributes are supported.</p>
     
 </body>
 </html>
