STYLES AND SEMANTICS COMPLETE. data element finished

--- a/stylesAndSemantics/data.html
+++ b/stylesAndSemantics/data.html
@@ -2,13 +2,37 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;data&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Data - &lt;data&gt;</h1>
+    <p>The data element is used to add machine readable translation of any given content</p>
+    <p>Importantly a machine readable value can be added and an associated human readable value</p>
+    <p>If the data is to be a time value then the time element should be used instead!</p>
+    <p>These data values are not visible on the display and are mainly used for behind the scenes data handling, however below shows a typical use of the data element:</p>
     
+    <br>
+
+    <h2>Examples:</h2>
+    <p>New Products</p>
+    <ul>
+        <li><data value="398">Mini Ketchup</data></li>
+        <li><data value="399">Jumbo Ketchup</data></li>
+        <li><data value="400">Mega Jumbo Ketchup</data></li>
+    </ul>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>A value attribute is available to supply a machine readable translation regarding the content of the element.</p>
+    <p>The global attribute is supported.</p>
+
 </body>
 </html>
