--- a/metaInfo/base.html
+++ b/metaInfo/base.html
@@ -2,13 +2,35 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<head>
+    <base href="https://">
+</head>
+<title>&lt;base&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Base - &lt;base&gt;</h1>
+    <p>The base element is used to specify a base url for all relative URL's in a document</p>
+    <p>The base tag must contain a href or target attribute. Or both!</p>
+    <p>There can only be one single base element in a document, and importantly it must be in the head element!</p>
+    <p>Typically to best use this the base url should end with a / or the the url tag should start with a /. The base doesnt seem to work with the base - "https://"</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <a href="www.coingecko.com/en">Google</a>
+    <a href=""></a>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global attributes are supported</p>
     
 </body>
 </html>
