Base finished, head started

--- a/metaInfo/base.html
+++ b/metaInfo/base.html
@@ -19,7 +19,7 @@
     <br>
 
     <h2>Examples:</h2>
-    <a href="www.coingecko.com/en">Google</a>
+    <a href="www.coingecko.com/en">CoinGecko</a>
     <a href=""></a>
 
     <br>
@@ -30,6 +30,8 @@
     <br>
 
     <h2>Attributes:</h2>
+    <p>The href attribute is used to supply the base url for all relative urls!</p>
+    <p>The target attribute is used to supply targets for the hyperlinks and forms in the page! _blank, _parent, _self, _top.</p>
     <p>The global attributes are supported</p>
     
 </body>
