--- a/metaInfo/head.html
+++ b/metaInfo/head.html
@@ -2,13 +2,38 @@
 <html lang="en">
 
 <meta charset="utf-8">
-<title>&lt;&gt;</title>
+<title>&lt;head&gt;</title>
 <!-- &lt; &gt; -->
 
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Head - &lt;head&gt;</h1>
+    <p>The head element is mainly a container for metadata(data about data) and this data is not displayed on the page!</p>
+    <p>This is placed inbetween the html and body tag!</p>
+    <p>This data typically states the document title, character set, styles, scripts, and other meta information.</p>
+    <p>The following elements can go inside the head element:</p>
+    <li>&lt;title&gt;</li>
+    <li>&lt;style&gt;</li>
+    <li>&lt;base&gt;</li>
+    <li>&lt;link&gt;</li>
+    <li>&lt;meta&gt;</li>
+    <li>&lt;script&gt;</li>
+    <li>&lt;noscript&gt;</li>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <p> This text is normal <span style="color: rgb(9, 224, 9); font-style: italic;">unlike this text</span></p>
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global attribute is supported.</p>
     
 </body>
 </html>
