Base and head elements finished

--- a/htmlElements/metaInfo/base.html
+++ b/htmlElements/metaInfo/base.html
@@ -23,6 +23,7 @@
     <br>
 
     <h2>Examples:</h2>
+    <!--THIS NEEDS CHANGING AS THIS EXPLAINS THE ATTRIBUTE MORE THAN THE BASE ELEMENT-->
     <h3>URL Hyperlinks:</h3>
     <table>
         <tr>
