--- a/htmlElements/metaInfo/head.html
+++ b/htmlElements/metaInfo/head.html
@@ -13,6 +13,7 @@
     <p>The head element is mainly a container for metadata(data about data) and this data is not displayed on the page!</p>
     <p>This is placed inbetween the html and body tag!</p>
     <p>This data typically states the document title, character set, styles, scripts, and other meta information.</p>
+    <p>A title tag is required and should be put in every html document!</p>
     <p>The following elements can go inside the head element:</p>
     <li>&lt;title&gt;</li>
     <li>&lt;style&gt;</li>
@@ -25,12 +26,13 @@
     <br>
 
     <h2>Examples:</h2>
-    
+    <p>This is the head element for this webpage</p>
+    <img src="media/images/examples/headExample.jpg">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="media/images/defaultStyles/headDefault.jpg"></img>
 
     <br>
 
