--- a/htmlElements/metaInfo/head.html
+++ b/htmlElements/metaInfo/head.html
@@ -22,6 +22,8 @@
     <li>&lt;meta&gt;</li>
     <li>&lt;script&gt;</li>
     <li>&lt;noscript&gt;</li>
+    <li>&lt;template&gt;</li>
+    <p>If no head element is in a document, most html5 browsers will add one in</p>
 
     <br>
 
