--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--The link for the majority of the html aspects that are to be covered. HTML Reference navbar:
     https://www.w3schools.com/tags/ref_byfunc.asp-->
 <body>
-    <h1>HTML Progression Website</h1>
+    <h1>Website progression</h1>
 
     <nav>
         <a href="./htmlElements/htmlElements.html">Html Elements</a>
@@ -17,7 +17,7 @@
     </nav>
 
     <p>The progression of the website follows as:</p>
-    <li>Explore all html elements, attributes and events.</li>
+    <li>Explore all html5 elements, attributes and events.</li>
     <li>Explore styling all of these elements with css.</li>
     <li>Explore integrating javascript into the website.</li>
 
