Added layout to all webpage, started table element

--- a/htmlElements/formatting/sup.html
+++ b/htmlElements/formatting/sup.html
@@ -13,7 +13,22 @@
 <body>
 
     <h1> - &lt;&gt;</h1>
-    <p></p>
+    <p></p>]
+
+    <br>
+
+    <h2>Examples:</h2>
+    <img src="">
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global attribute is supported.</p>
     
 </body>
 </html>
