--- a/htmlElements/tables/table.html
+++ b/htmlElements/tables/table.html
@@ -12,8 +12,23 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Table - &lt;table&gt;</h1>
+    <p>The table tag simply creates a table on the webpage. This table can have columns and rows added to it.</p>
+
+    <br>
+
+    <h2>Examples:</h2>
+    <img src="">
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global attribute is supported.</p>
     
 </body>
 </html>
