--- a/htmlElements/programming/embed.html
+++ b/htmlElements/programming/embed.html
@@ -14,6 +14,21 @@
 
     <h1> - &lt;&gt;</h1>
     <p></p>
+    #
+    <br>
+
+    <h2>Examples:</h2>
+    <img src="">
+
+    <br>
+
+    <h2>Default Styling:</h2>
+    <p>None</p>
+
+    <br>
+
+    <h2>Attributes:</h2>
+    <p>The global attribute is supported.</p>
     
 </body>
 </html>
