--- a/htmlElements/stylesAndSemantics/summary.html
+++ b/htmlElements/stylesAndSemantics/summary.html
@@ -25,7 +25,9 @@
         <summary><strong>Details summary!</strong></summary>
         <p>Paragraph inside of a details element!</p>
     </details>
-
+    <p>This is how its coded:</p>
+    <img src="">
+    
     <br>
 
     <h2>Default Styling:</h2>
