Working on getting design done first

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="icon" type="image/x-icon" href="media/images/favicon.ico">
+
     <title>Index</title>
 </head>
 
@@ -22,6 +23,7 @@
     <p>The progression of the website follows as:</p>
     <li>Explore all html5 elements, attributes and events.</li>
     <li>Explore styling all of these elements with css.</li>
+    <li>Explore the basics of HTML canvas and HTML audio/video</li>
     <li>Explore integrating javascript into the website.</li>
 
 </body>
